<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_name_one"
        android:id="@+id/button"
        android:layout_row="0"
        android:layout_column="0"
        android:textSize="16dp"
        android:padding="15dp"
        android:onClick="onAnimationImageOneClick"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_name_two"
        android:id="@+id/button2"
        android:layout_row="0"
        android:layout_column="1"
        android:textSize="16dp"
        android:padding="15dp"
        android:onClick="onAnimationImageTwoClick"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_name_three"
        android:id="@+id/button3"
        android:layout_row="0"
        android:layout_column="2"
        android:textSize="16dp"
        android:padding="15dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:onClick="onAnimationImageThreeClick"
        android:layout_marginTop="10dp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:layout_row="2"
        android:layout_column="1"
        android:src="@drawable/android_img"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Ko-ko"
        android:id="@+id/button8"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="20dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Mouuu"
        android:id="@+id/button9"
        android:layout_alignTop="@+id/button8"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Myaoo"
        android:id="@+id/button10"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/button3"
        android:layout_alignEnd="@+id/button3"
        android:layout_marginBottom="20dp" />
</RelativeLayout>